bk_ida/gccida/c0/compute_hash_table
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_hash_table/src/gcse.c:2961:1: error: use of undeclared identifier 'reg_avail_info_0'; did you mean 'reg_avail_info'?
reg_avail_info_0 = (  struct reg_avail_info *)gmalloc( 12 * max_gcse_regno); 
^~~~~~~~~~~~~~~~
reg_avail_info
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_hash_table/src/gcse.c:1300:31: note: 'reg_avail_info' declared here
static struct reg_avail_info *reg_avail_info;
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_hash_table/src/gcse.c:2963:1: error: use of undeclared identifier 'reg_avail_info_0'; did you mean 'reg_avail_info'?
reg_avail_info_0[i].last_bb = -1; 
^~~~~~~~~~~~~~~~
reg_avail_info
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_hash_table/src/gcse.c:1300:31: note: 'reg_avail_info' declared here
static struct reg_avail_info *reg_avail_info;
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_hash_table/src/gcse.c:3015:7: error: use of undeclared identifier 'reg_avail_info_0'; did you mean 'reg_avail_info'?
free( reg_avail_info_0); 
      ^~~~~~~~~~~~~~~~
      reg_avail_info
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_hash_table/src/gcse.c:1300:31: note: 'reg_avail_info' declared here
static struct reg_avail_info *reg_avail_info;
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_hash_table/src/gcse.c:3016:1: error: use of undeclared identifier 'reg_avail_info_0'; did you mean 'reg_avail_info'?
reg_avail_info_0 = 0LL; 
^~~~~~~~~~~~~~~~
reg_avail_info
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_hash_table/src/gcse.c:1300:31: note: 'reg_avail_info' declared here
static struct reg_avail_info *reg_avail_info;
                              ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_hash_table/src/obj/gcse.o] Error 1
